Fixes gap between dropdown list and combobox, adds files back into jquery library that were deleted

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,14 @@ nav {
   margin: 0 0 10px 0;
 }
 
+.menu {
+  position: fixed;
+}
+
+.ui-menu {
+  z-index: 500;
+}
+
 .fixed {
   position: fixed;
   top: 0;
